--- a/trunk/web/eng/projeler/masaustu/zemberek-pardus/index.html
+++ b/trunk/web/eng/projeler/masaustu/zemberek-pardus/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-	<title>:: ulusal dağıtım project :: tübitak-uekae ::</title>
+	<title>:: ulusal dağıtım projesi :: tübitak-uekae ::</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="../../../stil.css" rel="stylesheet" type="text/css">
 	<link rel="shortcut icon" type="image/x-icon" href="../../../images/favicon.ico">
@@ -27,15 +27,15 @@
 <tr>
 <td width="680" height="19" valign="top" bgcolor="#B9D0B3">
 <p class="menubar">
-<a href="../../../index.html">Home</a>
-| <a href="../../../hakkimizda.html">About</a>
-| <a href="../../../projeler/index.html">Projects</a>
-| <a href="../../../belgeler/index.html">Documents</a>
-| <a href="../../../urunler/index.html">Products</a>
-| <a href="../../../sss.html">FAQ</a>
-| <a href="../../../iletisim.html">Contact Us</a>
-| <a href="../../../basin/index.html">Press</a>
-| <a href="../../../../index.html">Türkçe</a>
+<a href="../../../index.html">Ana Sayfa</a>
+| <a href="../../../hakkimizda.html">Hakkımızda</a>
+| <a href="../../../projeler/index.html">Projeler</a>
+| <a href="../../../belgeler/index.html">Belgeler</a>
+| <a href="../../../urunler/index.html">Ürünler</a>
+| <a href="../../../sss.html">Sık Sorulanlar</a>
+| <a href="../../../iletisim.html">İletişim</a>
+| <a href="../../../basin/index.html">Basında Uludağ</a>
+| <a href="../../../eng/index.html">English</a>
 </p>
 </tr>
 </table>
@@ -52,27 +52,32 @@
 
 <p class="icmetin">
 Zemberek Pardus
-project aims to combine <a href="https://zemberek.dev.java.net/">Zemberek</a> Turkish natural language processing software with Pardus and softwares in it.
+projesi, <a href="https://zemberek.dev.java.net/">Zemberek</a> Türkçe doğal
+dil işleme yazılımını Pardus ve üzerindeki yazılımlar ile
+birleştirmeyi amaçlamaktadır.
 </p>
 
 <p class="icmetin">
-Project's goal is to respond to requirements of Pardus's spell checking and grammatical control by using lowest system sources.
+Projenin hedefi; Pardus'un Türkçe yazım denetimi ve gramer kontrolü
+ihtiyaçlarının Zemberek tarafından, sistem kaynaklarını en az seviyede
+tüketen bir yapı ile karşılanması.
 </p>
 
 <br>
 
 <p>
 <img src="../../../images/bullet6.png" alt="nokta"
-     align="top"><span class="baslik"> Scope</span>
+     align="top"><span class="baslik"> Kapsam</span>
 </p>
 
 <p class="icmetin">
-The following job descriptions are valid under the project.
+Proje çerçevesinde aşağıdaki iş tanımları geçerlidir.
 
 <ul>
- <li>To determine ZemberekServer protocol.</li>
- <li>To add ZemberekServer to Pardus as a service.</li>
- <li>To provide the softwares which needs spell checking to use Zemberek.</li>
+ <li>ZemberekServer protokolünün tam olarak belirlenmesi.</li>
+ <li>ZemberekServer'ın bir servis olarak Pardus'a eklenmesi</li>
+ <li>İmla denetimine ihtiyaç duyan uygulama programlarının Zemberek'i
+   kullanmalarının sağlanması</li>
 </ul>
 
 </p>
@@ -82,7 +87,7 @@ The following job descriptions are valid under the project.
 
 <p>
 <img src="../../../images/bullet6.png" alt="nokta"
-     align="top"><span class="baslik"> Screenshots</span>
+     align="top"><span class="baslik"> Ekran Görüntüleri</span>
 
 <center><table class="belge" cellspacing=10><tbody>
 
@@ -102,7 +107,7 @@ The following job descriptions are valid under the project.
 
 <p>
 <img src="../../../images/bullet6.png" alt="nokta"
-     align="top"><span class="baslik"> E-Mail Lists</span>
+     align="top"><span class="baslik"> E-Posta Listeleri</span>
 </p>
 
 <p class="icmetin">
@@ -110,18 +115,20 @@ The following job descriptions are valid under the project.
 </p>
 
 <p>
-<img src="../../../images/bullet6.png" alt="nokta" align="top"><span class="baslik"> Source Codes</span>
+<img src="../../../images/bullet6.png" alt="nokta" align="top"><span class="baslik"> Kodlar</span>
 </p>
 
 <p class="icmetin">
 <a
    href="http://svn.uludag.org.tr/uludag/trunk/zpspell">zpspell</a>:
-	Proxy client for ZemberekServer.
+   ZemberekServer için vekil (proxy) istemcisi. 
 </p>
 <p class="icmetin">
 <a
-   href="https://svn.uludag.org.tr/paketler/trunk/kde-base/kdelibs/files/pardus/kdelibs-3.4.0-zemberek.patch">KDE patch</a>:
-This patch is for KDE softwares to make them use Zemberek.</p>
+   href="https://svn.uludag.org.tr/paketler/trunk/kde-base/kdelibs/files/pardus/kdelibs-3.4.0-zemberek.patch">Zemberek
+   KDE yaması</a>: KDE uygulamalarını yazım denetimi için Zemberek'i
+   kullanmaları için gerekli KDE yaması.
+</p>
 
 </div>
 <!-- SAYFA İÇERİK SONU -->
@@ -129,14 +136,15 @@ This patch is for KDE softwares to make them use Zemberek.</p>
 <!-- yayın hakkı -->
 <br>
 <br>
-<p class="not">Information and documents on Uludağ Project
-web pages can be used
-freely anywhere with original source credit. <em><br>
-<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli
-- Türkiye.</strong></em>
-For information and suggestion(s) please write to <a
- href="mailto:bilgi at uludag.org.tr">bilgi
-at uludag.org.tr</a> </p>
+<p class="not">
+Ulusal Dağıtım sayfalarında bulunan bilgi ve belgelerin,
+kaynak gösterilmek koşulu ile kullanılması serbesttir.
+<em><br>
+<strong>TÜBİTAK - UEKAE, PK.74 41470, Gebze / Kocaeli.</strong></em>
+Bilgi ve önerileriniz için
+<a href="mailto:bilgi at uludag.org.tr">bilgi
+at uludag.org.tr</a>
+</p>
 <br>
 
 </td>
