--- a/web/projeler/kalite/index.html
+++ b/web/projeler/kalite/index.html
@@ -31,11 +31,11 @@
   </td>
  </tr>
  <tr>
-  <td bgcolor="#EEEEEE">
+  <td height="340" bgcolor="#EEEEEE">
 	<table width="800" border="0" align="center" cellpadding="6" cellspacing="10">
 	  <tr bgcolor="#004444">
-	    <td>&nbsp;</td>
-	    <td class="baslik"><br><p>:: Kalite Takımı, Amaç ::</p>
+	    <td height="348">&nbsp;</td>
+	    <td class="baslik"><br><p><img src="cuce01.png" width="150" height="150" hspace="10" vspace="10" align="left">:: Kalite Takımı, Amaç ::</p>
 	      <p class="metin">
 	      
 	     Uludağ Projesi Kalite Takımı, projenin işleyişini hızlandırmak ve yardım etmek isteyen her
@@ -44,7 +44,7 @@
 	     işte size fırsat. İşinin bir kısmı da yeni gelenleri projeye ilgi alanlarına ve becerilerine göre
 	     adapte etmek olan kalite takımı size yardım edecektir.<br><br>
 	     Kalite takımının amacı, yerelleştirme çalışmaları, belgeleme çalışmaları, uygulama ve sürüm testleri,
-	     hata raporlama, kullanıcı grafik arayüzlerinin test edilmesi ve değerlendirilmesi, yazılım geliştirme,
+	     hata<img src="cuce02.png" width="91" height="150" hspace="10" vspace="10" align="right"> raporlama, kullanıcı grafik arayüzlerinin test edilmesi ve değerlendirilmesi, yazılım geliştirme,
 	     web sayfalarının ve belgelerin uluslararasılaştırılması, projenin doğru şekilde tanıtılması ve yeni 
 	     insanlara ulaşmak gibi proje ihtiyaçlarına cevap vermek üzere çalışan insanları bulunduran bir takımdır.<br><br>
 	     Bu takımın işi değerli katkınızı ihtiyaç duyulan noktalara kanalize ederek projeye gelen katkı kalitesini arttırmak
