--- a/web/eng/basin/index.html
+++ b/web/eng/basin/index.html
@@ -47,50 +47,50 @@
 <tr>
 <td width="20" valign="top"><img src="../images/bullet6.png" width="20" height="20" hspace="0" vspace="0" align="top"></td>
 <td width="10" valign="top">&nbsp;</td>
-               <td width="661" valign="top" class="metin"><p><span class="baslik"><font face="Verdana, Arial, Helvetica, sans-serif">Basında Uludağ Projesi ve Pardus...</font></span><br>
+               <td width="661" valign="top" class="metin"><p><span class="baslik"><font face="Verdana, Arial, Helvetica, sans-serif">Uludag Project and Pardus in Press...</font></span><br>
                         <br><br>
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.03.13/sabah.jpg">Sabah Gazetesi</a>, 13.03.2005</span>
-						<br><i>"Türkiye'nin en gizli kurumu özgür yazılımı kullanıma açtı"</i>
+						<br><i>"Turkey's most secret corporation opens free software to use"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.03.08/cumhuriyet.jpg">Cumhuriyet Gazetesi</a>, 08.03.2005</span>
-						<br><i>"Bilişim açık kaynaklı yazılımla gelişir"</i>
+						<br><i>"Computing grows up with open source software"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.03.06/ortadogu.jpg">Ortadoğu Gazetesi</a>, 06.03.2005</span>
-						<br><i>"TÜBİTAK'tan ücretsiz, Linux tabanlı işletim sistemi"</i>
+						<br><i>"Free, Linux based operating system from TÜBİTAK"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.03.06/referans.jpg">Referans Gazetesi</a>, 06.03.2005</span>
-						<br><i>"Kamunun yeniden yapılanmasında bilgi işlemden yararlanılmalı"</i>
+						<br><i>"They must take advantage of computing"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.03.04/cumhuriyet.jpg">Cumhuriyet Gazetesi</a>, 04.03.2005</span>
-						<br><i>"Ulusal işletim sistemi kullanımda"</i>
+						<br><i>"National operating system is in use"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.03.04/hurriyet.jpg">Hürriyet Gazetesi</a>, 04.03.2005</span>
-						<br><i>"Ulusal işletim sistemi dağıtılıyor"</i>
+						<br><i>"National operating system is distributing"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.03.04/referans.jpg">Referans Gazetesi</a>, 04.03.2005</span>
-						<br><i>"Pardus CD'si ücretsiz dağıtılıyor"</i>
+						<br><i>"Pardus CD's are distributing free of charge"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.03.03/birgun.jpg">Birgün Gazetesi</a>, 03.03.2005</span>
-						<br><i>"Açık Kaynak Kod Platformu kuruldu"</i>
+						<br><i>"Open Source Platform built up"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.03.01/focus.jpg">Focus Dergisi</a>, 01.03.2005</span>
-						<br><i>"Artık Türkiye'nin de bir 'Ulusal İşletim Sistemi' var!"</i>
+						<br><i>"At least, Turkey has a national operating system!"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.03.01/pcnet.jpg">PCNet Dergisi</a>, 01.03.2005</span>
-						<br><i>"Açık kaynak gücü"</i>
+						<br><i>"Open source power"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.03.01/pcworld.jpg">PC World Dergisi</a>, 01.03.2005</span>
-						<br><i>"Türkiye ulusal Linux'una kavuştu"</i>
+						<br><i>"Turkey comes together with national Linux"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.03.01/yenisafak.jpg">Yeni Şafak Gazetesi</a>, 01.03.2005</span>
@@ -98,43 +98,43 @@
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.02.24/cumhuriyet.jpg">Cumhuriyet Gazetesi</a>, 24.02.2005</span>
-						<br><i>"Yine MEB, yine Microsoft, yine F klavye"</i>
+						<br><i>"Again MEB, again Microsoft, again F keyboard"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.02.22/radikal.jpg">Radikal Gazetesi</a>, 22.02.2005</span>
-						<br><i>"Bilişimde marka bağımlılığı"</i>
+						<br><i>"Mark dependency in computers"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.02.22/gunboyu.jpg">Günboyu Gazetesi</a>, 22.02.2005</span>
-						<br><i>"Dizüstü kampanyası ulusal güvenliğe tehdit mi?"</i>
+						<br><i>"Is laptop campaign danger for national security?"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.02.19/dbtercuman.jpg">D.B. Tercüman Gazetesi</a>, 19.02.2005</span>
-						<br><i>"Dizüstünde güvenlik krizi"</i>
+						<br><i>"Security crisis on laptops"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.02.14/radikal.jpg">Radikal Gazetesi</a>, 14.02.2005</span>
-						<br><i>"Bill Gates ile 'kazan/kazan' oyunu"</i>
+						<br><i>"'win or win' game with Bill Gates"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.02.10/birgun.jpg">Birgün Gazetesi</a>, 10.02.2005</span>
-						<br><i>"İlk ulusal işletim sistemi: PARDUS"</i>
+						<br><i>"First national operating system: PARDUS"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.02.07/radikal.jpg">Radikal Gazetesi</a>, 07.02.2005</span>
-						<br><i>"Bill Gates Türkiye'ye neden geldi?"</i>
+						<br><i>"Why Bill Gates come to Turkey?"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.02.03/cumhuriyet1.jpg">Cumhuriyet Gazetesi</a>, 03.02.2005</span>
-						<br><i>"Bill Türkiye'yi tekeline aldı!"</i>
+						<br><i>"Bill monopolizes Turkey!"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.02.03/cumhuriyet2.jpg">Cumhuriyet Gazetesi</a>, 03.02.2005</span>
-						<br><i>"Bill Gates'e kötü haber"</i>
+						<br><i>"Bad news Bill Gates"</i>
 						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.02.02/cumhuriyet.jpg">Cumhuriyet Gazetesi</a>, 02.02.2005</span>
-						<br><i>"Microsoft değil TÜBİTAK"</i>
+						<br><i>"It's TÜBİTAK not Microsoft"</i>
 						<br><br>
 
 
