--- a/web/eng/sss.html
+++ b/web/eng/sss.html
@@ -208,7 +208,7 @@ For more information about Pardus Live Cd and usage, visit <a href="urunler/inde
 		
 		<a name="md5sum" href="./sss.html#top"><i>Some files have md5sum extension in your web page. What is it?</i></a><br><br>
 
-MD5SUM files are used to control whether if the downloaded ISO files are damaged while downloading. When you open MD5SUM files with an editor, you will see a string and a file name. You can check the MD5SUM of ISO file with <a href="http://www.uludag.org.tr/uludag/md5summer.exe">md5summer.exe</a> application. If the result of MD5SUM of ISO file and the string in the MD5SUM file aren't the same, it means ISO file was damaged while downloading. In that you have to download the ISO file again. Linux users can do this with "md5sum" application. In console, use "md5sum -c file_name.md5sum" command to check if the ISO file was damaged or not.
+MD5SUM files are used to control whether if the downloaded ISO files are damaged while downloading. When you open MD5SUM files with an editor, you will see a string and a file name. You can check the MD5SUM of ISO file with <a href="ftp://ftp.uludag.org.tr/pub/md5summer.exe">md5summer.exe</a> application. If the result of MD5SUM of ISO file and the string in the MD5SUM file aren't the same, it means ISO file was damaged while downloading. In that you have to download the ISO file again. Linux users can do this with "md5sum" application. In console, use "md5sum -c file_name.md5sum" command to check if the ISO file was damaged or not.
 <br><br>
 		
 		<a name="indir" href="./sss.html#top"><i>How can i download Pardus?</i></a><br><br>
@@ -357,7 +357,7 @@ The root password for Pardus Live CD is "uludag".
 	
 You can find source codes of applications in Pardus Live Cd in our version control system store (<a href="https://svn.uludag.org.tr/paketler/">https://svn.uludag.org.tr/paketler/</a>).
 <br><br>
-For more information for subversion usage please read <a href="http://www.uludag.org.tr/svn/svn.html">subversion usage manual</a>.
+For more information for subversion usage please read <a href="http://www.uludag.org.tr/eng/belgeler/gelistirici/index.html">New Developer's Guide</a> manual.
 <br><br><br>
 		
 
