--- a/web/projeler/turkce/y10me/node_9.html
+++ b/web/projeler/turkce/y10me/node_9.html
@@ -59,12 +59,12 @@ resmi yerelleştirme çalışmalarını listelenmektedir.<BR>
 <H2><A NAME="htoc9">3</A>&nbsp;&nbsp;Belgeleme çalışmaları</H2>
 
 <H3><A NAME="htoc10">3.1</A>&nbsp;&nbsp;belgeler.org</H3>
-<IMG SRC="y10me005.gif"><BR>
+<IMG SRC="logo/belgelerlogo.png"><BR>
 <BR>
 Özgür lisansa sahip pek çok belgenin Türkçe çevirilerinin yanı sıra
 özgün belgeler ile zengin bir belge arşivi oluşturuyorlar.
 <DL COMPACT=compact><DT>
-<B>Web&nbsp;Sayfaları:</B><DD><A HREF="www.belgeler.org"><TT>www.belgeler.org</TT></A>
+<B>Web&nbsp;Sayfaları:</B><DD><A HREF="http://www.belgeler.org"><TT>www.belgeler.org</TT></A>
 </DL>
 <table class='navbar'><tbody><tr><td class='navbut'><a href='node_8.html'><img src='../../../images/nav_back.png' border=0> Önceki sayfa</a></td><td class='navbut'><a href='index.html'><img src='../../../images/nav_home.png' border=0> Başlangıç</a></td><td class='navbut'><a href='node_10.html'><img src='../../../images/nav_forward.png' border=0> Sonraki sayfa</a></td></tr></tbody></table>
 </div>
